--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>ws-server</module>
         <module>ws-test</module>
+        <module>ws-api</module>
     </modules>
 
     <dependencies>
