--- a/ws-api/pom.xml
+++ b/ws-api/pom.xml
@@ -10,11 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.liveperson.ws.demo</groupId>
-    <artifactId>serverClock</artifactId>
-    <version>1.0.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <artifactId>ws-api</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
@@ -26,9 +29,10 @@
             <version>2.5.0</version>
         </dependency>
         <dependency>
-            <groupId>com.liveperson.ws.demo</groupId>
-            <artifactId>ws-api</artifactId>
-            <version>1.0.0.0-SNAPSHOT</version>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
         </dependency>
     </dependencies>
+
 </project>
