--- a/ws-test/pom.xml
+++ b/ws-test/pom.xml
@@ -32,7 +32,12 @@
         </dependency>
         <dependency>
             <groupId>com.liveperson.ws.demo</groupId>
-            <artifactId>server</artifactId>
+            <artifactId>serverClock</artifactId>
+            <version>1.0.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.liveperson.ws.demo</groupId>
+            <artifactId>ws-api</artifactId>
             <version>1.0.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
