--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,25 @@
             <version>2.4</version>
         </dependency>
 
+        <!-- for the json scheme -->
+        <dependency>
+            <groupId>com.github.fge</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>2.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.fge</groupId>
+            <artifactId>jackson-coreutils</artifactId>
+            <version>1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.fge</groupId>
+            <artifactId>json-schema-core</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
+
+
     </dependencies>
     <build>
         <plugins>
